# tencentcloud-cls-sdk-cpp

./: .gitignore  CMakeLists.txt  client.cpp  client.h  cls-sync-http.pcapng  cls_logs.pb.cc  cls_logs.pb.h  example_sync.cpp  logproducerconfig.pb.cc  logproducerconfig.pb.h  main.cpp
example_protobuf/: example_protobuf.go  go.mod
